<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="glide_radio_button_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp_radio_button_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_button_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_id">0</string>

    <string name="channel_description">"Udacity Project 3"</string>
    <string name="channel_name">Udacity</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_image">Download Image</string>
    <string name="status_label">Download Status:</string>
    <string name="file_name_label">File Name:</string>
</resources>
